[project]
name = "urlclean"
version = "0.4.2"
description = "Simple url cleaning script"
requires-python = "==3.13.*"
dependencies = [
    "clipman>=3.3.3",
    "cx-freeze>=8.4.1",
    "icecream>=2.1.8",
    "requests>=2.32.5",
    "typer>=0.20.0",
    "yarl>=1.22.0",
]

[[tool.cxfreeze.executables]]
script = "main.py"
base = "console"
copyright = "Copyright (C) 2025 yukiyosanako"
target_name = "urlclean"
#shortcut_name = "urlclean"
#shortcut_dir = "MyProgramMenu"

[tool.cxfreeze.build_exe]
zip_include_packages = []
optimize = 2
